WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
186809
WKWebsiteDataStoreRemoveAllServiceWorkerRegistrations does not invoke callback when Service Workers disabled
https://bugs.webkit.org/show_bug.cgi?id=186809
Summary
WKWebsiteDataStoreRemoveAllServiceWorkerRegistrations does not invoke callbac...
Don Olmstead
Reported
2018-06-19 11:35:28 PDT
If ENABLE(SERVICE_WORKER) is false then the callback is never invoked. This is causing a stall in TestController::clearServiceWorkerRegistrations.
Attachments
Patch
(1.17 KB, patch)
2018-06-19 13:06 PDT
,
Don Olmstead
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Don Olmstead
Comment 1
2018-06-19 13:06:18 PDT
Created
attachment 343089
[details]
Patch
WebKit Commit Bot
Comment 2
2018-06-19 14:48:49 PDT
Comment on
attachment 343089
[details]
Patch Clearing flags on attachment: 343089 Committed
r232984
: <
https://trac.webkit.org/changeset/232984
>
WebKit Commit Bot
Comment 3
2018-06-19 14:48:51 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-06-19 14:49:20 PDT
<
rdar://problem/41265029
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug