WKWebsiteDataStoreRemoveAllServiceWorkerRegistrations does not invoke callback when Service Workers disabled https://bugs.webkit.org/show_bug.cgi?id=186809

Reviewed by Chris Dumez.

* UIProcess/API/C/WKWebsiteDataStoreRef.cpp:
(WKWebsiteDataStoreRemoveAllServiceWorkerRegistrations):


Canonical link: https://commits.webkit.org/202084@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232984 268f45cc-cd09-0410-ab3c-d52691b4dbfc